--- a/tests/integration/pages/form-submit-validation.html
+++ b/tests/integration/pages/form-submit-validation.html
@@ -13,12 +13,17 @@
       <input type="email" name="email" value="">
     </label>
     <button type="submit">Submit</button>
+    <span data-valmsg-for="email"></span>
   </form>
-
-  <span data-valmsg-for="email"></span>
   <div id="fixture-validation-result">Awaiting response...</div>
 
-  <script src="../../../dist/alis.js"></script>
+  <script type="module">
+    import ALIS from '/dist/alis.esm.js';
+    window.ALIS = ALIS;
+    window.__ALIS_INIT = false;
+    ALIS.init();
+    window.__ALIS_INIT = true;
+  </script>
 </body>
 
 </html>
