feat: add comprehensive form testing, debounce, custom components, and hooks
Features:
- Comprehensive form support for all HTML input types (text, email, password,
  number, date, time, datetime-local, url, tel, color, search, hidden, select,
  multi-select, textarea, radio, checkbox)
- Filter container POST with data-alis-collect='closest:#container'
- Custom value selectors: data-alis-value='#selector@attribute' and
  data-alis-value-fn='functionName' for Syncfusion-like components
- Debounce support: data-alis-trigger='input delay:500ms'
- Throttle support: data-alis-trigger='scroll throttle:200ms'
- ASP.NET validation tag helper conventions (data-valmsg-for, data-val-*)
- Confirm modal via hooks with ALIS.confirm.register()
- Toast notifications and grid refresh via onAfter hooks

Bug fixes:
- Fixed structuredCloneSafe to handle functions in config
- Fixed trigger matcher to handle modifiers in event names
- Fixed IIFE export to use ALISBundle name avoiding window.ALIS collision
- Fixed URL/method extraction from form elements
- Fixed data-alis-{method} attribute detection in trigger finder
- Fixed ACTIVE_REQUESTS cleanup via coordinateCleanupStep
- Fixed indicator parsing for 'class, #selector' format
- Fixed aria-busy on parent form elements
- Fixed retry to throw after max attempts with retryable status
- Fixed pipeline error propagation in runDefaultPipeline

New demos:
- demos/comprehensive-form/ - all input types
- demos/filter-container/ - non-form POST filtering
- demos/custom-components/ - Syncfusion-like components
- demos/debounce/ - debounce and throttle
- demos/hooks-advanced/ - modal, toast, grid refresh

Tests: 126 unit tests, 56 E2E tests passing

--- a/demos/form-submit/index.html
+++ b/demos/form-submit/index.html
@@ -1,35 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="utf-8">
-  <title>ALIS Demo – Form Submit</title>
-  <link rel="stylesheet" href="../assets/demo.css">
+    <meta charset="UTF-8">
+    <title>ALIS Demo: Form Submit</title>
+    <script src="../../dist/alis.js"></script>
 </head>
-
 <body>
-  <main class="demo-card">
     <h1>Form Submit Demo</h1>
-    <p>This scenario mirrors <code>tests/integration/pages/form-submit.html</code> and loads the shipping bundle from <code>dist/alis.js</code>.</p>
-
-    <form id="user-form" data-alis data-alis-target="result" action="/api/users" method="post" class="stack">
-      <label>
-        Email
-        <input type="email" name="email" required>
-      </label>
-      <button type="submit">Submit</button>
+    <form action="/api/submit" method="post" data-alis data-alis-target="#result">
+        <input type="text" name="name" value="Test User">
+        <button type="submit">Save</button>
     </form>
-
-    <div id="result" class="panel" aria-live="polite">Awaiting response...</div>
-
-    <section class="notice">
-      <strong>Note:</strong> This is a placeholder while the pipeline is under construction. Network requests are intercepted
-      by Playwright/MSW when tests run.
-    </section>
-  </main>
-
-  <script src="../../dist/alis.js"></script>
+    <div id="result"></div>
+    
+    <script>
+        ALIS.init();
+    </script>
 </body>
-
 </html>
-
