--- a/tests/integration/pages/form-submit-validation.html
+++ b/tests/integration/pages/form-submit-validation.html
@@ -7,13 +7,20 @@
 </head>
 
 <body>
-  <form id="fixture-validation-form" data-alis data-alis-target="fixture-validation-result" action="/api/users" method="post">
+  <form id="fixture-validation-form" data-alis data-alis-target="fixture-validation-result" action="/api/validate" method="post">
     <label>
       Email
       <input type="email" name="email" value="">
     </label>
-    <button type="submit">Submit</button>
     <span data-valmsg-for="email"></span>
+    
+    <label>
+      Password
+      <input type="password" name="password" value="">
+    </label>
+    <span data-valmsg-for="password"></span>
+    
+    <button type="submit">Submit</button>
   </form>
   <div id="fixture-validation-result">Awaiting response...</div>
 
@@ -27,4 +34,3 @@
 </body>
 
 </html>
-
